<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TripsFragment2">

    <TextView
        style="@style/DefaultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/new_trip"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="50dp"
        android:background="@color/lightGrey"/>

    <TextView
        style="@style/DefaultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginStart="30dp"
        android:text="@string/for_how_long"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/tripsTextColor"
        android:layout_marginTop="122dp"
        android:layout_marginStart="30dp"
        android:textSize="14sp"
        android:fontFamily="@font/roboto"
        android:text="@string/from"
        android:id="@+id/to_date"/>

    <EditText
        android:inputType="text"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="218dp"
        android:id="@+id/to"
        android:hint="@string/choose_end_date"
        android:textSize="15sp"
        android:autofillHints="@string/choose_end_date"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/tripsTextColor"
        android:layout_marginTop="200dp"
        android:layout_marginStart="30dp"
        android:textSize="14sp"
        android:fontFamily="@font/roboto"
        android:text="@string/to"
        android:id="@+id/tv_date"/>

    <EditText
        android:inputType="text"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="140dp"
        android:id="@+id/from"
        android:hint="@string/choose_start_date"
        android:textSize="15sp"
        android:autofillHints="@string/choose_start_date"/>

    <Button
        android:id="@+id/previous_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/previous"
        android:textSize="18sp"
        android:fontFamily="@font/roboto"
        android:textAllCaps="false"
        android:layout_marginTop="450dp"
        android:layout_marginRight="-10dp"
        android:layout_marginLeft="-140dp"
        android:backgroundTint="@color/lightGrey"
        android:background="@drawable/previous_trip_button"
        />

    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/next"
        android:textSize="18sp"
        android:fontFamily="@font/roboto"
        android:textAllCaps="false"
        android:layout_marginTop="450dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="100dp"
        android:background="@drawable/create_trip_button"
        />



</FrameLayout>
</layout>