<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TripsFragment3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:fontFamily="@font/roboto"
        android:text="@string/new_trip"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="50dp"
        android:background="@color/lightGrey"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/tripsTextColor"
        android:layout_marginTop="75dp"
        android:layout_marginStart="30dp"
        android:textSize="14sp"
        android:fontFamily="@font/roboto"
        android:text="@string/gender"
        android:id="@+id/genderText"/>

    <EditText
        android:autofillHints="@string/all"
        android:inputType="text"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="95dp"
        android:id="@+id/all"
        android:hint="@string/all"
        android:textSize="15sp"/>
    <CheckBox
        android:id="@+id/checkBoxAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginStart="335dp"
        />


    <EditText
        android:inputType="text"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="145dp"
        android:id="@+id/male"
        android:hint="@string/male"
        android:textSize="15sp"
        android:autofillHints="@string/male"/>
    <CheckBox
        android:id="@+id/checkBoxMale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginStart="335dp"
        />

    <EditText
        android:inputType="text"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="195dp"
        android:id="@+id/female"
        android:hint="@string/female"
        android:textSize="15sp"
        android:autofillHints="@string/female"/>
    <CheckBox
        android:id="@+id/checkBoxFemale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:layout_marginStart="335dp"
        />

    <EditText
        android:inputType="text"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="245dp"
        android:id="@+id/other"
        android:hint="@string/other"
        android:textSize="15sp"
        android:autofillHints="@string/other"/>
    <CheckBox
        android:id="@+id/checkBoxOther"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:layout_marginStart="335dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/tripsTextColor"
        android:layout_marginTop="315dp"
        android:layout_marginStart="30dp"
        android:textSize="14sp"
        android:fontFamily="@font/roboto"
        android:text="@string/age"
        android:id="@+id/ageText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="345dp"
        android:layout_marginStart="30dp"
        android:textSize="14sp"
        android:fontFamily="@font/roboto"
        android:text="@string/_0"
        android:id="@+id/minimumAge"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="345dp"
        android:layout_marginStart="350dp"
        android:textSize="14sp"
        android:fontFamily="@font/roboto"
        android:text="@string/_100"
        android:id="@+id/maximumAge"/>

    <SeekBar
        android:id="@+id/ageSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:min="0"
        android:max="100"
        android:progress="20"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="375dp"
        android:thumbTint="@color/trip"
        android:progressTint="@color/trip"/>

    <Button
        android:id="@+id/previous_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/previous"
        android:textSize="18sp"
        android:fontFamily="@font/roboto"
        android:textAllCaps="false"
        android:layout_marginTop="560dp"
        android:layout_marginRight="-10dp"
        android:layout_marginLeft="-140dp"
        android:backgroundTint="@color/lightGrey"
        android:background="@drawable/previous_trip_button"
        />

    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/next"
        android:textSize="18sp"
        android:fontFamily="@font/roboto"
        android:textAllCaps="false"
        android:layout_marginTop="560dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="100dp"
        android:background="@drawable/create_trip_button"
        />




</FrameLayout>
</layout>