<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TripsFragment4">

    <TextView
        style="@style/DefaultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/new_trip"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="50dp"
        android:background="@color/lightGrey"/>


    <TextView
        style="@style/DefaultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginStart="30dp"
        android:text="@string/where_are_you_going" />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="32dp">
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/autoCompleteTextView"
            android:layout_weight="1"
            android:inputType="none"
            android:text="@string/choose_destination"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/previous_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/previous"
        android:textSize="18sp"
        android:fontFamily="@font/roboto"
        android:textAllCaps="false"
        android:layout_marginTop="450dp"
        android:layout_marginRight="-10dp"
        android:layout_marginLeft="-140dp"
        android:backgroundTint="@color/lightGrey"
        android:background="@drawable/previous_trip_button"
        />

    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/next"
        android:textSize="18sp"
        android:fontFamily="@font/roboto"
        android:textAllCaps="false"
        android:layout_marginTop="450dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="100dp"
        android:background="@drawable/create_trip_button"
        />


</FrameLayout>
</layout>