<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TripsFragment5">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:fontFamily="@font/roboto"
        android:text="@string/new_trip"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="50dp"
        android:background="@color/lightGrey"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="80dp"
        android:textSize="20sp"
        android:fontFamily="@font/roboto"
        android:text="@string/what_is_the_plan_question"/>

    <EditText
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="120dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/plan_edit_text"
        android:fontFamily="@font/roboto"
        android:text="@string/what_is_the_plan"
        android:gravity="start"
        android:textColor="@color/grey_font"
        android:autofillHints=""
        android:hint="@string/what_is_the_plan"/>

    <Button
        android:id="@+id/previous_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/previous"
        android:textSize="18sp"
        android:fontFamily="@font/roboto"
        android:textAllCaps="false"
        android:layout_marginTop="560dp"
        android:layout_marginRight="-10dp"
        android:layout_marginLeft="-140dp"
        android:backgroundTint="@color/lightGrey"
        android:background="@drawable/previous_trip_button"
        />

    <Button
        android:id="@+id/publish_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/publish"
        android:textSize="18sp"
        android:fontFamily="@font/roboto"
        android:textAllCaps="false"
        android:layout_marginTop="560dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="100dp"
        android:background="@drawable/create_trip_button"
        />

</FrameLayout>
</layout>